--- a/resources/config.yaml
+++ b/resources/config.yaml
@@ -26,6 +26,10 @@ auth:
       method: "GET"
       roles: ["ADMIN", "ORG_ADMIN", "USER"]
       actions: ["read:departments"]
+    - path: "/api/v1/departments/:id"
+      method: "PUT"
+      roles: ["ADMIN", "ORG_ADMIN"] 
+      actions: ["update:departments"]
   publicPaths:
     - path: "/api/v1/departments"
       method: "POST"
@@ -35,24 +39,8 @@ auth:
       method: "GET"  
     - path: "/api/v1/departments/*"
       method: "GET"
-
-# TODO: To be updated
-# auth:
-#   serviceId: "my-service"
-#   clientId: "my-client"
-#   clientSecret: "${CLIENT_SECRET}"
-#   authServiceUrl: "http://auth-service:8080"  # Auth service endpoint instead of Keycloak
-#   cacheEnabled: true
-#   cacheUrl: "redis:6379"
-#   resources:
-#     - path: "/api/v1/users"
-#       method: "GET"
-#       roles: ["admin", "user"]
-#       actions: ["read:users"]
-#     - path: "/api/v1/users"
-#       method: "POST"
-#       roles: ["admin"]
-#       actions: ["create:users"]
+    - path: "/api/v1/departments/*"
+      method: "PUT"
 
 database:
   host: "127.0.0.1"
