--- a/resources/config.yaml
+++ b/resources/config.yaml
@@ -42,6 +42,24 @@ auth:
     - path: "/api/v1/departments/*"
       method: "PUT"
 
+# TODO: To be updated
+# auth:
+#   serviceId: "my-service"
+#   clientId: "my-client"
+#   clientSecret: "${CLIENT_SECRET}"
+#   authServiceUrl: "http://auth-service:8080"  # Auth service endpoint instead of Keycloak
+#   cacheEnabled: true
+#   cacheUrl: "redis:6379"
+#   resources:
+#     - path: "/api/v1/users"
+#       method: "GET"
+#       roles: ["admin", "user"]
+#       actions: ["read:users"]
+#     - path: "/api/v1/users"
+#       method: "POST"
+#       roles: ["admin"]
+#       actions: ["create:users"]
+
 database:
   host: "127.0.0.1"
   port: 5432
