HMS-19: Impletement PUT endpoint with UnitTests (#7)
* Create Progress

* create - in progress

* create - in progress

* Impletement Post

* Implement Post

* Update Department head and parent ID formats

* Impletement POST

* PUT-In progree

* Impletement PUT Endpoint

* Implement PUT Unit Tests

* Update Tests

* Router: Change Id to deptId

---------

Co-authored-by: Firstname Lastname <ananthianbarasan96@gmail.com>

--- a/resources/config.yaml
+++ b/resources/config.yaml
@@ -26,6 +26,10 @@ auth:
       method: "GET"
       roles: ["ADMIN", "ORG_ADMIN", "USER"]
       actions: ["read:departments"]
+    - path: "/api/v1/departments/:id"
+      method: "PUT"
+      roles: ["ADMIN", "ORG_ADMIN"] 
+      actions: ["update:departments"]
   publicPaths:
     - path: "/api/v1/departments"
       method: "POST"
@@ -35,6 +39,8 @@ auth:
       method: "GET"  
     - path: "/api/v1/departments/*"
       method: "GET"
+    - path: "/api/v1/departments/*"
+      method: "PUT"
 
 # TODO: To be updated
 # auth:
