HMS-20: Impletement DELETE endpoint with UnitTests (#8)
* Create Progress

* create - in progress

* create - in progress

* Impletement Post

* Implement Post

* Update Department head and parent ID formats

* Impletement POST

* PUT-In progree

* Impletement PUT Endpoint

* Implement PUT Unit Tests

* Update Tests

* Implement DELETE - Test cases{pass}

* Update Bru

* Update : Resolve conflicts

* Update : Resolve conflicts + code test

---------

Co-authored-by: Firstname Lastname <ananthianbarasan96@gmail.com>

--- a/resources/config.yaml
+++ b/resources/config.yaml
@@ -30,6 +30,11 @@ auth:
       method: "PUT"
       roles: ["ADMIN", "ORG_ADMIN"] 
       actions: ["update:departments"]
+    - path: "/api/v1/departments/:id"
+      method: "DELETE"
+      roles: ["ADMIN"]
+      actions: ["delete:departments"]
+
   publicPaths:
     - path: "/api/v1/departments"
       method: "POST"
@@ -41,24 +46,8 @@ auth:
       method: "GET"
     - path: "/api/v1/departments/*"
       method: "PUT"
-
-# TODO: To be updated
-# auth:
-#   serviceId: "my-service"
-#   clientId: "my-client"
-#   clientSecret: "${CLIENT_SECRET}"
-#   authServiceUrl: "http://auth-service:8080"  # Auth service endpoint instead of Keycloak
-#   cacheEnabled: true
-#   cacheUrl: "redis:6379"
-#   resources:
-#     - path: "/api/v1/users"
-#       method: "GET"
-#       roles: ["admin", "user"]
-#       actions: ["read:users"]
-#     - path: "/api/v1/users"
-#       method: "POST"
-#       roles: ["admin"]
-#       actions: ["create:users"]
+    - path: "/api/v1/departments/*"
+      method: "DELETE"
 
 database:
   host: "127.0.0.1"
